<resources>
    <string name="app_name">My App Persistencia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ingrese_un_entero">Ingrese un Entero</string>
    <string name="ingresa_un_texto">Ingresa un Texto</string>
    <string name="texto_almacenado_1_s">Texto Almacenado: %1$s</string>
    <string name="valor_entero">Valor Entero Almacenado es: %1$d</string>
    <string name="ingresa_un_n_mero_decimal">Ingresa un Número Decimal</string>
    <string name="valor_decimal">Valor Decimal Almacenado es: %1$s</string>
    <string name="borrar">BORRAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="BUTTON3">PREVIOUS</string>
</resources>